--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -4,68 +4,85 @@ on:
   schedule:
     - cron: '0 0 * * *'
 permissions:
+  contents: write
+  pages: write
   packages: read
 jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: tibdex/github-app-token@v1.8.2
-        if: ${{ !env.ACT }}
+      - name: Generate GitHub App Token
+        uses: tibdex/github-app-token@v1.8.2
         id: create-app-token
         with:
           app_id: ${{ secrets.APP_ID }}
           private_key: ${{ secrets.APP_PRIVATE_KEY }}
-      - uses: actions/checkout@v4
-        if: ${{ !env.ACT }}
+          repository: caliph21/iptv  # 你的 fork 仓库
+
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
           token: ${{ steps.create-app-token.outputs.token }}
-      - uses: actions/setup-node@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: 'npm'
+
       - name: Setup .npmrc for GitHub Packages
         run: |
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ steps.create-app-token.outputs.token }}" >> .npmrc
           echo "@iptv-org:registry=https://npm.pkg.github.com/" >> .npmrc
           echo "always-auth=true" >> .npmrc
+
       - name: Install dependencies
         run: npm install
+
       - name: Update internal playlists
-        run: npm run playlist:update --silent >> $GITHUB_OUTPUT
+        run: npm run playlist:update --silent
         id: playlist-update
+
       - name: Check internal playlists
         run: |
           npm run playlist:lint
           npm run playlist:validate
+
       - name: Generate public playlists
         run: npm run playlist:generate
+
       - name: Generate .api/streams.json
         run: npm run api:generate
+
       - name: Update readme
         run: npm run readme:update
+
       - name: Setup git
         run: |
           git config user.name "iptv-bot[bot]"
           git config user.email "84861620+iptv-bot[bot]@users.noreply.github.com"
+
       - name: Commit changes to /streams
         run: |
           git add streams
           git status
-          git commit --allow-empty -m "[Bot] Update /streams" -m "Committed by [iptv-bot](https://github.com/apps/iptv-bot) via [update](https://github.com/iptv-org/iptv/actions/runs/${{ github.run_id }}) workflow." -m "${{ steps.playlist-update.outputs.OUTPUT }}" --no-verify
+          git commit -m "[Bot] Update /streams" -m "Committed by [iptv-bot](https://github.com/apps/iptv-bot) via [update](https://github.com/caliph21/iptv/actions/runs/${{ github.run_id }}) workflow." --no-verify || echo "No changes to commit"
+
       - name: Commit changes to PLAYLIST.md
         run: |
           git add PLAYLISTS.md
           git status
-          git commit --allow-empty -m "[Bot] Update PLAYLISTS.md" -m "Committed by [iptv-bot](https://github.com/apps/iptv-bot) via [update](https://github.com/iptv-org/iptv/actions/runs/${{ github.run_id }}) workflow." --no-verify
+          git commit -m "[Bot] Update PLAYLISTS.md" -m "Committed by [iptv-bot](https://github.com/apps/iptv-bot) via [update](https://github.com/caliph21/iptv/actions/runs/${{ github.run_id }}) workflow." --no-verify || echo "No changes to commit"
+
       - name: Push all changes to the repository
-        if: ${{ !env.ACT && github.ref == 'refs/heads/master' }}
+        if: github.ref == 'refs/heads/master'
         run: git push
+
       - name: Deploy public playlists to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.1
-        if: ${{ !env.ACT && github.ref == 'refs/heads/master' }}
+        uses: JamesIves/github-pages-deploy-action@v4.1.1
+        if: github.ref == 'refs/heads/master'
         with:
-          repository-name: iptv-org/iptv
+          repository-name: caliph21/iptv  # 改为你的 fork 仓库
           branch: gh-pages
           folder: .gh-pages
           token: ${{ steps.create-app-token.outputs.token }}
@@ -73,15 +90,16 @@ jobs:
           git-config-email: 84861620+iptv-bot[bot]@users.noreply.github.com
           commit-message: '[Bot] Deploy to GitHub Pages'
           clean: true
-      - name: Move .api/streams.json to iptv-org/api
-        uses: JamesIves/github-pages-deploy-action@4.1.1
-        if: ${{ !env.ACT && github.ref == 'refs/heads/master' }}
+
+      - name: Move .api/streams.json to caliph21/api
+        uses: JamesIves/github-pages-deploy-action@v4.1.1
+        if: github.ref == 'refs/heads/master'
         with:
-          repository-name: iptv-org/api
+          repository-name: caliph21/api  # 你的 API 仓库
           branch: gh-pages
           folder: .api
           token: ${{ steps.create-app-token.outputs.token }}
           git-config-name: iptv-bot[bot]
           git-config-email: 84861620+iptv-bot[bot]@users.noreply.github.com
-          commit-message: '[Bot] Deploy to iptv-org/api'
+          commit-message: '[Bot] Deploy to caliph21/api'
           clean: false
